grid templating done

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
    <main>
       <!-- fond gris -->
       <div class="gray-bg">
-        <div class="container grid-2-1">
+        <div class="container grid-2-1 v-spacing">
             <!-- 2fr -->
             <article>
                 <img src="img/trending/trending_top02.jpg" alt="trending_top02">
@@ -111,7 +111,7 @@
       </div>
       <!-- section what's new -->
       <div class="gray-bg">
-        <div class="container grid-2-1">
+        <div class="container grid-2-1 v-spacing">
             <!-- 2fr -->
             <div>
                 <div class="white-bg">
@@ -129,7 +129,7 @@
                         </nav>
                     </div>
                     <!-- 1fr -->
-                    <div class="grid-1-1">
+                    <div class="grid-1-1 v-spacing">
                         <div>
                             <div>
                                 <img src="img/gallery/whats_news_details1.png" alt="whats_news_details1">
@@ -144,7 +144,7 @@
                         </div>
                         <!-- 1fr -->
                         <div>
-                            <article>
+                            <article class="grid-1-2">
                                 <img src="img/gallery/whats_right_img1.png" alt="whats_right_img1">
                                 <div>
                                     <span class="category blue-text">Fashion</span>
@@ -152,7 +152,7 @@
                                     <span class="date">Jun 19, 2020</span>
                                 </div>
                             </article>
-                            <article>
+                            <article class="grid-1-2">
                                 <img src="img/gallery/whats_right_img2.png" alt="whats_right_img2">
                                 <div>
                                     <span class="category blue-text">Fashion</span>
@@ -160,7 +160,7 @@
                                     <span class="date">Jun 19, 2020</span>
                                 </div>
                             </article>
-                            <article>
+                            <article class="grid-1-2">
                                 <img src="img/gallery/whats_right_img3.png" alt="whats_right_img3">
                                 <div>
                                     <span class="category green-text">Fashion</span>
@@ -168,7 +168,7 @@
                                     <span class="date">Jun 19, 2020</span>
                                 </div>
                             </article>
-                            <article>
+                            <article class="grid-1-2">
                                 <img src="img/gallery/whats_right_img4.png" alt="whats_right_img4">
                                 <div>
                                     <span class="category red-text">Fashion</span>
@@ -187,22 +187,22 @@
                 <div class="fans white-bg">
                     <div class="grid-2">
                         <!-- facebook -->
-                        <div>
+                        <div class="grid-1-2">
                             <img src="img/news/icon-fb.png" alt="icon-fb">
                             <p><span class="number">8,045</span>fans</p>
                         </div>
                         <!-- twitter -->
-                        <div>
+                        <div class="grid-1-2">
                             <img src="img/news/icon-tw.png" alt="icon-tw">
                             <p><span class="number">8,045</span>fans</p>
                         </div>
                         <!-- insta -->
-                        <div>
+                        <div class="grid-1-2">
                             <img src="img/news/icon-ins.png" alt="icon-ins">
                             <p><span class="number">8,045</span>fans</p>
                         </div>
                         <!-- youtube -->
-                        <div>
+                        <div class="grid-1-2">
                             <img src="img/news/icon-yo.png" alt="icon-yo">
                             <p><span class="number">8,045</span>fans</p>
                         </div>
@@ -240,7 +240,7 @@
       <!-- what's most popular -->
       <div class="gray-bg">
         <!-- conteneur -->
-        <div class="container">
+        <div class="container grid-1-4 v-spacing">
             <!-- 1fr -->
             <div>
                 <a href="#">
@@ -250,27 +250,29 @@
             <!-- 3fr -->
             <div class="white-bg">
                 <h3>Most popular</h3>
-                <article>
-                    <img src="img/gallery/weekly2News1.png" alt="weekly2News1">
-                    <div>
-                        <a href="#">Scarlett’s disappointment at latest accolade</a>
-                        <span class="date">Jhon | 2 hours ago</span>
-                    </div>
-                </article>
-                <article>
-                    <img src="img/gallery/weekly2News2.png" alt="weekly2News2">
-                    <div>
-                        <a href="#">Scarlett’s disappointment at latest accolade</a>
-                        <span class="date">Jhon | 2 hours ago</span>
-                    </div>
-                </article>
-                <article>
-                    <img src="img/gallery/weekly2News3.png" alt="weekly2News3">
-                    <div>
-                        <a href="#">Scarlett’s disappointment at latest accolade</a>
-                        <span class="date">Jhon | 2 hours ago</span>
-                    </div>
-                </article>
+                <div class="flex-3">
+                    <article>
+                        <img src="img/gallery/weekly2News1.png" alt="weekly2News1">
+                        <div>
+                            <a href="#">Scarlett’s disappointment at latest accolade</a>
+                            <span class="date">Jhon | 2 hours ago</span>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="img/gallery/weekly2News2.png" alt="weekly2News2">
+                        <div>
+                            <a href="#">Scarlett’s disappointment at latest accolade</a>
+                            <span class="date">Jhon | 2 hours ago</span>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="img/gallery/weekly2News3.png" alt="weekly2News3">
+                        <div>
+                            <a href="#">Scarlett’s disappointment at latest accolade</a>
+                            <span class="date">Jhon | 2 hours ago</span>
+                        </div>
+                    </article>
+                </div>
             </div>
         </div>
       </div>
@@ -278,7 +280,7 @@
       <div class="white-bg">
         <div class="container">
             <h2>Trending News</h2>
-            <div>
+            <div class="flex-3">
                 <article>
                     <img src="img/gallery/tranding2.png" alt="trending2">
                     <div class="content-overlay">
@@ -315,7 +317,7 @@
    </main>
    <!-- footer -->
    <footer class="black-bg">
-        <div class="container">
+        <div class="container flex-3">
             <!-- première colonne -->
             <div>
                 <img src="img/logo/logo2_footer.png" alt="logo2_footer">
@@ -327,7 +329,7 @@
             <div>
                 <h4>Popular post</h4>
                 <!-- article 1 -->
-                <article>
+                <article class="grid-1-4">
                     <img src="img/gallery/footer_post1.png" alt="footer_post1">
                     <div>
                         <a href="#">Scarlett’s disappointment at latest accolade</a>
@@ -335,7 +337,7 @@
                     </div>
                 </article>
                 <!-- article 2 -->
-                <article>
+                <article class="grid-1-4">
                     <img src="img/gallery/footer_post2.png" alt="footer_post2">
                     <div>
                         <a href="#">Scarlett’s disappointment at latest accolade</a>
@@ -343,7 +345,7 @@
                     </div>
                 </article>
                 <!-- article 3 -->
-                <article>
+                <article class="grid-1-4">
                     <img src="img/gallery/footer_post3.png" alt="footer_post3">
                     <div>
                         <a href="#">Scarlett’s disappointment at latest accolade</a>
