Header and homepage layout done

--- a/index.html
+++ b/index.html
@@ -5,29 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@500;700;800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <script src="js/main.js" defer async></script>
-    <title>Document</title>
+    <title>Evaluation</title>
 </head>
 <body>
     <!-- header -->
    <header class="header">
         <!-- fond noir -->
-        <div class="black-bg">
+        <div class="black-bg trending-title">
             <div class="container grid-4-1">
                 <div>
-                    <span>trending title</span>
-                    <p>Class property employ ancho red multi level mansion</p>
+                    <p><span class="header-title"><i class="fa-solid fa-bolt-lightning"></i>trending title</span>Class property employ ancho red multi level mansion</p>
                 </div>
                 <div><i class="fa-sharp fa-solid fa-calendar-days"></i> +880166 253 232</div>
             </div>
         </div>
         <!-- fond gris -->
         <div class="gray-bg">
-            <div class="container grid-1-4">
+            <div class="container weird-grid">
                 <a href="#">
                     <img src="img/logo/logo.png" alt="logo">
                 </a>
-                <img src="img/gallery/body_card1.png" alt="body_card1">
+                <img src="img/gallery/header_card.png" alt="body_card1">
             </div>
         </div>
         <!-- fond rouge avec nav -->
@@ -43,7 +45,7 @@
                     <li><a href="#">contact</a></li>
                </ul>
                <!-- réseaux sociaux -->
-                <div>
+                <div class="social-search">
                     <ul class="nav-social">
                         <li>
                             <a href="#">
@@ -75,10 +77,10 @@
         </div>
    </header>
    <!-- main -->
-   <main>
+   <main class="homepage">
       <!-- fond gris -->
       <div class="gray-bg">
-        <div class="container grid-2-1 v-spacing">
+        <div class="container div-1 grid-2-1 x-spacing">
             <!-- 2fr -->
             <article>
                 <img src="img/trending/trending_top02.jpg" alt="trending_top02">
@@ -110,8 +112,8 @@
         </div>
       </div>
       <!-- section what's new -->
-      <div class="gray-bg">
-        <div class="container grid-2-1 v-spacing">
+      <div class="gray-bg whats-new">
+        <div class="container grid-2-1 x-spacing">
             <!-- 2fr -->
             <div>
                 <div class="white-bg">
@@ -129,7 +131,7 @@
                         </nav>
                     </div>
                     <!-- 1fr -->
-                    <div class="grid-1-1 v-spacing">
+                    <div class="grid-1-1 x-spacing">
                         <div>
                             <div>
                                 <img src="img/gallery/whats_news_details1.png" alt="whats_news_details1">
@@ -238,9 +240,9 @@
         </div>
       </div>
       <!-- what's most popular -->
-      <div class="gray-bg">
+      <div class="gray-bg most-popular">
         <!-- conteneur -->
-        <div class="container grid-1-4 v-spacing">
+        <div class="container grid-1-4 x-spacing">
             <!-- 1fr -->
             <div>
                 <a href="#">
@@ -277,7 +279,7 @@
         </div>
       </div>
       <!-- trending news -->
-      <div class="white-bg">
+      <div class="white-bg trending-news">
         <div class="container">
             <h2>Trending News</h2>
             <div class="flex-3">
@@ -309,7 +311,7 @@
         </div>
       </div>
       <!-- pub -->
-      <div class="gray-bg">
+      <div class="gray-bg pub">
         <div class="container">
             <a href="#"><img src="img/gallery/body_card3.png" alt="body_card3"></a>
         </div>
