--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
       <div class="gray-bg">
         <div class="container div-1 grid-2-1 x-spacing">
             <!-- 2fr -->
-            <article>
-                <img src="img/trending/trending_top02.jpg" alt="trending_top02">
+            <article class="article1 article-overlay">
                 <div class="content-overlay">
                     <span class="category red">Business</span>
                     <h1>Anna Lora stuns in white at her australian premiere</h1>
@@ -92,16 +91,14 @@
             </article>
             <!-- 1fr -->
             <div>
-                <article>
-                    <img src="img/trending/trending_top3.jpg" alt="trending_top3">
+                <article class="article2 article-overlay">
                     <div class="content-overlay">
                         <span class="category blue">Fashion</span>
                         <h3>Anna Lora stuns in white at her australian premiere</h3>
                         <span class="date">by Alice cloe - Jun 19, 2020</span>
                     </div>
                 </article>
-                <article>
-                    <img src="img/trending/trending_top4.jpg" alt="trending_top4">
+                <article class="article3 article-overlay">
                     <div class="content-overlay">
                         <span class="category green">Tech</span>
                         <h3>Anna Lora stuns in white at her australian premiere</h3>
@@ -116,7 +113,7 @@
         <div class="container grid-2-1 x-spacing">
             <!-- 2fr -->
             <div>
-                <div class="white-bg">
+                <div class="white-bg wn-articles">
                     <!-- titre et nav -->
                     <div>
                         <h2>Whats new</h2>
@@ -213,7 +210,7 @@
                 <!-- most recent -->
                 <div>
                     <h3>Most recent</h3>
-                    <article>
+                    <article class="article-overlay">
                         <img src="img/gallery/most_recent.png" alt="most_recent">
                         <div class="content-overlay">
                             <span class="category purple">Vogue</span>
@@ -283,14 +280,14 @@
         <div class="container">
             <h2>Trending News</h2>
             <div class="flex-3">
-                <article>
+                <article class="article-overlay">
                     <img src="img/gallery/tranding2.png" alt="trending2">
                     <div class="content-overlay">
                         <h3>What to Expect From the 2020 Oscar Nomin ations</h3>
                         <span class="date">Jun 19, 2020</span>
                         <i class="fa-thin fa-circle-play"></i>
                     </div>
-                </article>
+                </article class="article-overlay">
                 <article>
                     <img src="img/gallery/tranding1.png" alt="trending1">
                     <div class="content-overlay">
@@ -298,7 +295,7 @@
                         <span class="date">Jun 19, 2020</span>
                         <i class="fa-thin fa-circle-play"></i>
                     </div>
-                </article>
+                </article class="article-overlay">
                 <article>
                     <img src="img/gallery/tranding2.png" alt="trending2">
                     <div class="content-overlay">
