--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
             <article class="article1 article-overlay">
                 <div class="content-overlay">
                     <span class="category red">Business</span>
-                    <h1>Anna Lora stuns in white at her australian premiere</h1>
+                    <a href="#">
+                        <h1>Anna Lora stuns in white at her australian premiere</h1>
+                    </a>
                     <span class="date">by Alice cloe - Jun 19, 2020</span>
                 </div>
             </article>
@@ -94,14 +96,18 @@
                 <article class="article2 article-overlay">
                     <div class="content-overlay">
                         <span class="category blue">Fashion</span>
-                        <h3>Anna Lora stuns in white at her australian premiere</h3>
+                        <a href="#">
+                            <h3>Anna Lora stuns in white at her australian premiere</h3>
+                        </a>
                         <span class="date">by Alice cloe - Jun 19, 2020</span>
                     </div>
                 </article>
                 <article class="article3 article-overlay">
                     <div class="content-overlay">
                         <span class="category green">Tech</span>
-                        <h3>Anna Lora stuns in white at her australian premiere</h3>
+                        <a href="#">
+                            <h3>Anna Lora stuns in white at her australian premiere</h3>
+                        </a>
                         <span class="date">by Alice cloe - Jun 19, 2020</span>
                     </div>
                 </article>
@@ -115,22 +121,22 @@
             <div>
                 <div class="white-bg wn-articles">
                     <!-- titre et nav -->
-                    <div>
+                    <div class="whatsnew-header">
                         <h2>Whats new</h2>
                         <nav>
                             <ul>
-                                <li>Lifestyle</li>
-                                <li>Travel</li>
-                                <li>Fashion</li>
-                                <li>Sports</li>
-                                <li>Technology</li>
+                                <li><a href="#">Lifestyle</a></li>
+                                <li><a href="#">Travel</a></li>
+                                <li><a href="#">Fashion</a></li>
+                                <li><a href="#">Sports</a></li>
+                                <li><a href="#">Technology</a></li>
                             </ul>
                         </nav>
                     </div>
                     <!-- 1fr -->
                     <div class="grid-1-1 x-spacing">
-                        <div>
-                            <div>
+                        <div class="secretart-article">
+                            <div class="overflow-hidden">
                                 <img src="img/gallery/whats_news_details1.png" alt="whats_news_details1">
                             </div>
                             <div class="content">
@@ -142,10 +148,10 @@
                             </div>
                         </div>
                         <!-- 1fr -->
-                        <div>
+                        <div class="small-articles">
                             <article class="grid-1-2">
                                 <img src="img/gallery/whats_right_img1.png" alt="whats_right_img1">
-                                <div>
+                                <div class="content">
                                     <span class="category blue-text">Fashion</span>
                                     <h4><a href="#">Portrait of group of friends ting eat. market in.</a></h4>
                                     <span class="date">Jun 19, 2020</span>
@@ -153,7 +159,7 @@
                             </article>
                             <article class="grid-1-2">
                                 <img src="img/gallery/whats_right_img2.png" alt="whats_right_img2">
-                                <div>
+                                <div class="content">
                                     <span class="category blue-text">Fashion</span>
                                     <h4><a href="#">Portrait of group of friends ting eat. market in.</a></h4>
                                     <span class="date">Jun 19, 2020</span>
@@ -161,7 +167,7 @@
                             </article>
                             <article class="grid-1-2">
                                 <img src="img/gallery/whats_right_img3.png" alt="whats_right_img3">
-                                <div>
+                                <div class="content">
                                     <span class="category green-text">Fashion</span>
                                     <h4><a href="#">Portrait of group of friends ting eat. market in.</a></h4>
                                     <span class="date">Jun 19, 2020</span>
@@ -169,7 +175,7 @@
                             </article>
                             <article class="grid-1-2">
                                 <img src="img/gallery/whats_right_img4.png" alt="whats_right_img4">
-                                <div>
+                                <div class="content">
                                     <span class="category red-text">Fashion</span>
                                     <h4><a href="#">Portrait of group of friends ting eat. market in.</a></h4>
                                     <span class="date">Jun 19, 2020</span>
@@ -184,50 +190,51 @@
             <div>
                 <!-- fans -->
                 <div class="fans white-bg">
-                    <div class="grid-2">
+                    <div class="grid-2 fans-sub">
                         <!-- facebook -->
                         <div class="grid-1-2">
-                            <img src="img/news/icon-fb.png" alt="icon-fb">
+                            <a href="#"><img src="img/news/icon-fb.png" alt="icon-fb"></a>
                             <p><span class="number">8,045</span>fans</p>
                         </div>
                         <!-- twitter -->
                         <div class="grid-1-2">
-                            <img src="img/news/icon-tw.png" alt="icon-tw">
+                            <a href="#"><img src="img/news/icon-tw.png" alt="icon-tw"></a>
                             <p><span class="number">8,045</span>fans</p>
                         </div>
                         <!-- insta -->
                         <div class="grid-1-2">
-                            <img src="img/news/icon-ins.png" alt="icon-ins">
+                            <a href="#"><img src="img/news/icon-ins.png" alt="icon-ins"></a>
                             <p><span class="number">8,045</span>fans</p>
                         </div>
                         <!-- youtube -->
                         <div class="grid-1-2">
-                            <img src="img/news/icon-yo.png" alt="icon-yo">
+                            <a href="#"><img src="img/news/icon-yo.png" alt="icon-yo"></a>
                             <p><span class="number">8,045</span>fans</p>
                         </div>
                     </div>
                 </div>
                 <!-- most recent -->
-                <div>
+                <div class="white-bg most-recent">
                     <h3>Most recent</h3>
-                    <article class="article-overlay">
-                        <img src="img/gallery/most_recent.png" alt="most_recent">
+                    <article class="article4 article-overlay">
                         <div class="content-overlay">
                             <span class="category purple">Vogue</span>
-                            <h3>Anna Lora stuns in white at her australian premiere</h3>
+                            <a href="#">
+                                <h3>Anna Lora stuns in white at her australian premiere</h3>
+                            </a>
                             <span class="date">Jhon | 2 hours ago</span>
                         </div>
                     </article>
                     <article class="grid-1-4">
                         <img src="img/gallery/most_recent1.png" alt="most_recent1">
-                        <div>
+                        <div class="content">
                             <a href="#">Scarlett’s disappointment at latest accolade</a>
                             <span class="date">Jhon | 2 hours ago</span>
                         </div>
                     </article>
                     <article class="grid-1-4">
                         <img src="img/gallery/most_recent2.png" alt="most_recent2">
-                        <div>
+                        <div class="content">
                             <a href="#">Scarlett’s disappointment at latest accolade</a>
                             <span class="date">Jhon | 2 hours ago</span>
                         </div>
@@ -247,26 +254,26 @@
                 </a>
             </div>
             <!-- 3fr -->
-            <div class="white-bg">
+            <div class="white-bg most-popular-articles">
                 <h3>Most popular</h3>
                 <div class="flex-3">
                     <article>
                         <img src="img/gallery/weekly2News1.png" alt="weekly2News1">
-                        <div>
+                        <div class="content">
                             <a href="#">Scarlett’s disappointment at latest accolade</a>
                             <span class="date">Jhon | 2 hours ago</span>
                         </div>
                     </article>
                     <article>
                         <img src="img/gallery/weekly2News2.png" alt="weekly2News2">
-                        <div>
+                        <div class="content">
                             <a href="#">Scarlett’s disappointment at latest accolade</a>
                             <span class="date">Jhon | 2 hours ago</span>
                         </div>
                     </article>
                     <article>
                         <img src="img/gallery/weekly2News3.png" alt="weekly2News3">
-                        <div>
+                        <div class="content">
                             <a href="#">Scarlett’s disappointment at latest accolade</a>
                             <span class="date">Jhon | 2 hours ago</span>
                         </div>
@@ -280,28 +287,31 @@
         <div class="container">
             <h2>Trending News</h2>
             <div class="flex-3">
-                <article class="article-overlay">
-                    <img src="img/gallery/tranding2.png" alt="trending2">
-                    <div class="content-overlay">
-                        <h3>What to Expect From the 2020 Oscar Nomin ations</h3>
+                <article class="article5">
+                    <div class="content">
+                        <a href="#">
+                            <h3>What to Expect From the 2020 Oscar Nomin ations</h3>
+                        </a>
                         <span class="date">Jun 19, 2020</span>
-                        <i class="fa-thin fa-circle-play"></i>
+                        <a href="#"><i class="fa-regular fa-circle-play"></i></a>
                     </div>
-                </article class="article-overlay">
-                <article>
-                    <img src="img/gallery/tranding1.png" alt="trending1">
-                    <div class="content-overlay">
-                        <h3>What to Expect From the 2020 Oscar Nomin ations</h3>
+                </article>
+                <article class="article6">
+                    <div class="content">
+                        <a href="#">
+                            <h3>What to Expect From the 2020 Oscar Nomin ations</h3>
+                        </a>
                         <span class="date">Jun 19, 2020</span>
-                        <i class="fa-thin fa-circle-play"></i>
+                        <a href="#"><i class="fa-regular fa-circle-play"></i></a>
                     </div>
-                </article class="article-overlay">
-                <article>
-                    <img src="img/gallery/tranding2.png" alt="trending2">
-                    <div class="content-overlay">
-                        <h3>What to Expect From the 2020 Oscar Nomin ations</h3>
+                </article>
+                <article class="article7">
+                    <div class="content">
+                        <a href="#">
+                            <h3>What to Expect From the 2020 Oscar Nomin ations</h3>
+                        </a>
                         <span class="date">Jun 19, 2020</span>
-                        <i class="fa-thin fa-circle-play"></i>
+                        <a href="#"><i class="fa-regular fa-circle-play"></i></a>
                     </div>
                 </article>
             </div>
@@ -318,19 +328,19 @@
    <footer class="black-bg">
         <div class="container flex-3">
             <!-- première colonne -->
-            <div>
+            <div class="infos">
                 <img src="img/logo/logo2_footer.png" alt="logo2_footer">
                 <p>Lorem ipsum dolor sit amet, nsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
                 <address>198 West 21th Street, Suite 721 New York,NY 10010</address>
                 <p>Phone: +95 (0) 123 456 789 Cell: +95 (0) 123 456 789</p>
             </div>
             <!-- deuxième colonne -->
-            <div>
+            <div class="popular-posts">
                 <h4>Popular post</h4>
                 <!-- article 1 -->
                 <article class="grid-1-4">
                     <img src="img/gallery/footer_post1.png" alt="footer_post1">
-                    <div>
+                    <div class="content">
                         <a href="#">Scarlett’s disappointment at latest accolade</a>
                         <span class="date">Jhon | 2 hours ago</span>
                     </div>
@@ -338,7 +348,7 @@
                 <!-- article 2 -->
                 <article class="grid-1-4">
                     <img src="img/gallery/footer_post2.png" alt="footer_post2">
-                    <div>
+                    <div class="content">
                         <a href="#">Scarlett’s disappointment at latest accolade</a>
                         <span class="date">Jhon | 2 hours ago</span>
                     </div>
@@ -346,7 +356,7 @@
                 <!-- article 3 -->
                 <article class="grid-1-4">
                     <img src="img/gallery/footer_post3.png" alt="footer_post3">
-                    <div>
+                    <div class="content">
                         <a href="#">Scarlett’s disappointment at latest accolade</a>
                         <span class="date">Jhon | 2 hours ago</span>
                     </div>
