Hover animation mixin done

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <!-- 1fr -->
                     <div class="grid-1-1 x-spacing">
                         <div class="secretart-article">
-                            <div class="overflow-hidden">
+                            <div class="secretart-hidden">
                                 <img src="img/gallery/whats_news_details1.png" alt="whats_news_details1">
                             </div>
                             <div class="content">
