Header + nav responsive

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/styles.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
         <div class="black-bg trending-title">
             <div class="container grid-4-1">
                 <div>
-                    <p><span class="header-title"><i class="fa-solid fa-bolt-lightning"></i>trending title</span>Class property employ ancho red multi level mansion</p>
+                    <p><span class="header-title"><i class="fa-solid fa-bolt-lightning"></i>trending title</span><span class="p-none">Class property employ ancho red multi level mansion</span></p>
                 </div>
                 <div><i class="fa-sharp fa-solid fa-calendar-days"></i> +880166 253 232</div>
             </div>
@@ -29,13 +29,22 @@
                 <a href="#">
                     <img src="img/logo/logo.png" alt="logo">
                 </a>
-                <img src="img/gallery/header_card.png" alt="body_card1">
+                <a href="#"><img src="img/gallery/header_card.png" alt="body_card1"></a>
             </div>
         </div>
         <!-- fond rouge avec nav -->
         <div class="red-bg">
             <!-- nav -->
-           <nav class="container grid-4-1">
+           <nav class="container grid-4-1 nav">
+                <a href="#">
+                    <img src="img/logo/logo.png" alt="logo">
+                </a>
+                <!-- burger menu -->
+                <div class="burger-menu">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
                 <!-- categories -->
                <ul class="nav-cat">
                     <li><a href="#">home</a></li>
