mobile footer done

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="red-bg">
             <!-- nav -->
            <nav class="container grid-4-1 nav">
-                <a href="#">
+                <a href="#" class="logo">
                     <img src="img/logo/logo.png" alt="logo">
                 </a>
                 <!-- burger menu -->
