Homepage responsive done

--- a/index.html
+++ b/index.html
@@ -255,9 +255,9 @@
       <!-- what's most popular -->
       <div class="gray-bg most-popular">
         <!-- conteneur -->
-        <div class="container grid-1-4 x-spacing">
+        <div class="container grid-1-4-flex x-spacing">
             <!-- 1fr -->
-            <div>
+            <div class="pub-a-la-con">
                 <a href="#">
                     <img src="img/gallery/body_card2.png" alt="body_card2.png">
                 </a>
