Latest news page done = responsive

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                 </div>
                 <!-- categories -->
                <ul class="nav-cat">
-                    <li><a href="#">home</a></li>
-                    <li><a href="#">about</a></li>
-                    <li><a href="#">category</a></li>
-                    <li><a href="#">latest news</a></li>
-                    <li><a href="#">contact</a></li>
+                    <li><a href="index.html">home</a></li>
+                    <li><a href="about.html">about</a></li>
+                    <li><a href="category.html">category</a></li>
+                    <li><a href="latest-news.html">latest news</a></li>
+                    <li><a href="contact.html">contact</a></li>
                </ul>
                <!-- réseaux sociaux -->
                 <div class="social-search">
