--- a/about.html
+++ b/about.html
@@ -87,25 +87,71 @@
    </header>
    <!-- main -->
    <main class="about">
+        <!-- Our Mission etc. -->
         <div class="mission-vision gray-bg">
-           <div class="mission">
-                <h4>Our Mission</h4>
-                <p>Consectetur adipiscing elit, sued do eiusmod tempor ididunt udfgt labore et dolore magna aliqua. Quis ipsum suspendisces gravida. Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan lacus. Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan lacus.</p>
-                <p>Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan lacus. Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan.</p>
+           <div class="container">
+               <div class="mission">
+                    <h4>Our Mission</h4>
+                    <p>Consectetur adipiscing elit, sued do eiusmod tempor ididunt udfgt labore et dolore magna aliqua. Quis ipsum suspendisces gravida. Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan lacus. Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan lacus.</p>
+                    <p>Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan lacus. Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan.</p>
+               </div>
+               <div class="vision">
+                    <h4>Our Vision</h4>
+                    <p>Consectetur adipiscing elit, sued do eiusmod tempor ididunt udfgt labore et dolore magna aliqua. Quis ipsum suspendisces gravida. Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan lacus. Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan lacus.</p>
+                    <p>Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan lacus. Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan.</p>
+                </div>
            </div>
-           <div class="vision">
-                <h4>Our Vision</h4>
-                <p>Consectetur adipiscing elit, sued do eiusmod tempor ididunt udfgt labore et dolore magna aliqua. Quis ipsum suspendisces gravida. Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan lacus. Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan lacus.</p>
-                <p>Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan lacus. Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan.</p>
-            </div> 
         </div>
+        <!-- Our Best Services -->
         <div class="services">
             <img src="img/gallery/section_bg02.jpg" alt="section_bg02">
-            <h2>Our best services</h2>
+            <div class="services-content container grid-1-1">
+                <div class="services-img">
+                    <img src="img/gallery/about.png" alt="">
+                </div>
+                <div class="services-text">
+                    <span class="under-title">our top services</span>
+                    <h2>Our best services</h2>
+                    <p>Mollit anim laborum duis adseu dolor iuyn voluptcate velit ess cillum dolore egru lofrre dsu quality mollit anim laborumuis au dolor in voluptate velit cillu.</p>
+                    <p>Mollit anim laborum.Dvcuis aute serunt iruxvfg dhjkolohr indd re voluptate velit esscillumlore eu quife nrulla parihatur. Excghcepteur sfwsignjnt occa cupidatat non aute iruxvfg dhjinulpadeserunt moll.</p>
+                    <a href="#" class="button">more about us</a>
+                </div>
+            </div>
         </div>
+        <!-- Our Team Mambers -->
         <div class="team gray-bg">
-            <h2>Our team members</h2>
-            
+            <div class="container">
+                <h2>Our team members</h2>
+                <div class="flex-3">
+                    <div class="tm">
+                        <div class="tm-img">
+                            <img src="img/gallery/team1.png" alt="team1">
+                        </div>
+                        <div class="tm-txt">
+                            <a href="#">Ethan Welch</a>
+                            <span class="under-title">UX designer</span>
+                        </div>
+                    </div>
+                    <div class="tm">
+                        <div class="tm-img">
+                            <img src="img/gallery/team2.png" alt="team2">
+                        </div>
+                        <div class="tm-txt">
+                            <a href="#">Ethan Welch</a>
+                            <span class="under-title">UX designer</span>
+                        </div>
+                    </div>
+                    <div class="tm">
+                        <div class="tm-img">
+                            <img src="img/gallery/team3.png" alt="team3">
+                        </div>
+                        <div class="tm-txt">
+                            <a href="#">Ethan Welch</a>
+                            <span class="under-title">UX designer</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>        
    </main>
    <!-- footer -->
