--- a/about.html
+++ b/about.html
@@ -109,12 +109,12 @@
                 <div class="services-img">
                     <img src="img/gallery/about.png" alt="">
                 </div>
-                <div class="services-text">
-                    <span class="under-title">our top services</span>
+                <div class="services-txt">
+                    <span class="special-title">our top services</span>
                     <h2>Our best services</h2>
                     <p>Mollit anim laborum duis adseu dolor iuyn voluptcate velit ess cillum dolore egru lofrre dsu quality mollit anim laborumuis au dolor in voluptate velit cillu.</p>
                     <p>Mollit anim laborum.Dvcuis aute serunt iruxvfg dhjkolohr indd re voluptate velit esscillumlore eu quife nrulla parihatur. Excghcepteur sfwsignjnt occa cupidatat non aute iruxvfg dhjinulpadeserunt moll.</p>
-                    <a href="#" class="button">more about us</a>
+                    <a href="#" class="button"><span>more about us</span></a>
                 </div>
             </div>
         </div>
@@ -127,7 +127,7 @@
                         <div class="tm-img">
                             <img src="img/gallery/team1.png" alt="team1">
                         </div>
-                        <div class="tm-txt">
+                        <div class="tm-txt white-bg">
                             <a href="#">Ethan Welch</a>
                             <span class="under-title">UX designer</span>
                         </div>
@@ -136,7 +136,7 @@
                         <div class="tm-img">
                             <img src="img/gallery/team2.png" alt="team2">
                         </div>
-                        <div class="tm-txt">
+                        <div class="tm-txt white-bg">
                             <a href="#">Ethan Welch</a>
                             <span class="under-title">UX designer</span>
                         </div>
@@ -145,7 +145,7 @@
                         <div class="tm-img">
                             <img src="img/gallery/team3.png" alt="team3">
                         </div>
-                        <div class="tm-txt">
+                        <div class="tm-txt white-bg">
                             <a href="#">Ethan Welch</a>
                             <span class="under-title">UX designer</span>
                         </div>
