about page responsive done

--- a/about.html
+++ b/about.html
@@ -121,6 +121,7 @@
         <!-- Our Team Mambers -->
         <div class="team gray-bg">
             <div class="container">
+                <span class="special-title">our professional members</span>
                 <h2>Our team members</h2>
                 <div class="flex-3">
                     <div class="tm">
